<resources>
    <string name="app_name">makaan.com</string>
    <string name="action_settings">Settings</string>
    <string name="item_settings">account settings</string>
    <string name="app_upgrade">please update your app?</string>
    <string name="item_logout">logout</string>
    <string name="upgrade">Upgrade</string>
    <string name="gps_network_not_enabled">Location settings disabled</string>
    <string name="gps_network_enable_prompt">Would you like to enable location settings?</string>
    <string name="no_matching_results">sorry, no matching locality found</string>
    <string name="sign_up">sign up</string>
    <string name="get_call_back">get call back</string>
    <string name="indian_code">+91</string>
    <string name="instantly">instantly</string>
    <string name="jarvis_apply_button_string">ok</string>
    <string name="jarvis_apply_filter_string">would you like to apply filter?</string>
    <string name="bhk_string">bhk</string>
    <string name="et_type_hint">property type</string>
    <string name="et_price_hint">\u20B9 price</string>
    <string name="et_locality_hint">locality</string>
    <string name="btn_apply_string">apply</string>
    <string name="give_you_call_back_string">we\'ll give you a call back</string>
    <string name="call_now">call now</string>
    <string name="get_callback">get callBack</string>
    <string name="share_your_details">share your details</string>
    <string name="pyr_buy">buy</string>
    <string name="pyr_rent">rent</string>
    <string name="pyr_name">name</string>
    <string name="pyr_email">email</string>
    <string name="pyr_mobile">mobile</string>
    <string name="pyr_requirements">next</string>
    <string name="select_locality_text">Select Locality</string>
    <string name="select_locality_search_hint">Search Location</string>
    <string name="selected_items_count_text">See your selection below</string>
    <string name="clear_button_text">Clear All</string>
    <string name="empty_selection_text">search items for addition</string>
    <string name="add_text">ADD</string>
    <string name="pyr_locality_value_string">select locality</string>
    <string name="pyr_location_string">location</string>
    <string name="pyr_bedroom_string">bedrooms</string>
    <string name="pyr_one_bhk_text">1</string>
    <string name="pyr_two_bhk_text">2</string>
    <string name="pyr_three_bhk_text">3</string>
    <string name="pyr_four_bhk_text">4</string>
    <string name="pyr_property_string">property</string>
    <string name="pyr_property_value_string">residential property apartment</string>
    <string name="search_locality">search locality in </string>
    <string name="pyr_budget_string">budget</string>
    <string name="cluster_item_group_text">we’ve grouped properties</string>
    <string name="search_by_property">search by property</string>
    <string name="filter">filter</string>
    <string name="relevance">relevance</string>
    <string name="apply">apply</string>
    <string name="jarvis_button_transition">jarvistransition</string>
    <string name="oops">oops!</string>
    <string name="no_matchin_sellers">no sellers offering matching properties.</string>
    <string name="hurray">hurray</string>
    <string name="joy_ride">and the joy ride begins</string>
    <string name="contacting_makaan_assist">for contacting makaan assists</string>
    <string name="sellers">sellers</string>
    <string name="seller">seller</string>
    <string name="sellr">seller</string>
    <string name="contact_you">will contact you shortly</string>
    <string name="thank_you_continue">done</string>
    <string name="receive_expert">you will shortly receive a call from makaan assist </string>
    <string name="consultations">consultations, end to end services</string>
    <string name="privacy">and assured privacy</string>
    <string name="new_listings">new listings are added daily..</string>
    <string name="alerts_msg">set alerts to get the latest in your inbox</string>
    <string name="set_alerts">set alerts</string>
    <string name="set_alert">set alert</string>
    <string name="or_text">"or "</string>
    <string name="select_sellers">select from best sellers</string>
    <string name="contact_top_advisors">contact 4 advisors</string>
    <string name="contact_string">contact </string>
    <string name="advisors_string">advisors</string>
    <string name="view_all_sellers">view all sellers</string>
    <string name="add_user_name_toast">add user name</string>
    <string name="invalid_email">please provide a valid email (3-50 chars)</string>
    <string name="invalid_password">please provide a valid password (6-32 chars)</string>
    <string name="invalid_phone_no_toast">invalid phone no</string>
    <string name="listings_limit_toast">Only a maximum of 6 listings can be added</string>
    <string name="otp_string">OTP</string>
    <string name="enter_otp">please enter otp</string>
    <string name="verification_code_string">verification code</string>
    <string name="resend_string">resend?</string>
    <string name="skip_string">skip</string>
    <string name="property_string">property</string>
    <string name="select_property_type_string">select property type</string>
    <string name="apply_string">apply</string>
    <string name="contact_top_advisors_string">contact top advisors</string>
    <string name="no_sellers_assist_string">you will receive properties in your inbox for given requirements</string>
    <string name="property_for_sale_string">properties for\nsale</string>
    <string name="property_for_rent_string">properties\nfor rent1</string>
    <string name="view_deatils_string">view details</string>
    <string name="properties_for_sale">properties for sale</string>
    <string name="properties_for_rent">properties for rent</string>
    <string name="view_details">view details</string>
    <string name="view_seller_details_string">view seller details</string>
    <string name="builder_experience_string">experience: </string>
    <string name="total_projects_string">total projects</string>
    <string name="ongoing_projects_string">ongoing projects</string>
    <string name="view_projects_string">view projects</string>
    <string name="city_title">mumbai</string>
    <string name="city_sub_title">city of seven islands</string>
    <string name="city_connect_header_text">connect with the best sellers of</string>
    <string name="overview">an overview</string>
    <string name="properties_in">properties in</string>
    <string name="price_trends">price trends</string>
    <string name="more">more</string>
    <string name="read_more">read more</string>
    <string name="contact_top_sellers">contact top sellers</string>
    <string name="contact_top_seller">contact top seller</string>
    <string name="contact_all_seller">contact all sellers</string>
    <string name="contact_sellers">contact sellers</string>
    <string name="contact">contact</string>
    <string name="more_about">more about</string>
    <string name="more_about_locality">read more about locality</string>
    <string name="read_less">less</string>
    <string name="intrested_in">interested in</string>
    <string name="know_more">know more about</string>
    <string name="name">name</string>
    <string name="projects">projects</string>
    <string name="project">project</string>
    <string name="property">property</string>
    <string name="years">years</string>
    <string name="months">months</string>
    <string name="buy">buy</string>
    <string name="rent">rent</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="submit">submit</string>
    <string name="show_properties">show all properties</string>
    <string name="price_growth">price growth</string>
    <string name="demand_supply">demand &amp; supply</string>
    <string name="annual_growth">annual price growth</string>
    <string name="rental_yield">annual rental yield</string>
    <string name="avg_price_prefix">avg. price</string>
    <string name="avg_price_postfix">/ sq ft</string>
    <string name="property_range">property range</string>
    <string name="emi_rs">emi from  \u20B9</string>
    <string name="floor_plan">floor plan</string>
    <string name="top_localities">top localities</string>
    <string name="view_properties">view properties</string>
    <string name="locality_title" />
    <string name="locality_about_median_price">avg buy price</string>
    <string name="locality_about_annual_growth">annual growth</string>
    <string name="locality_about_median_rent">avg rent</string>
    <string name="locality_rental_demand">rental demand</string>
    <string name="locality_kyn_title">know your neighbourhood</string>
    <string name="locality_nearby_localities_title">nearby localities</string>
    <string name="locality_available_locality_status">available property status</string>
    <string name="locality_price_trends_label">price trends</string>
    <string name="localities_lifestyle_title">lifestyle in</string>
    <string name="locality_top_agents_label">top sellers</string>
    <string name="locality_top_builders_label">top builders in %s</string>
    <string name="locality_top_builders_no_locality_label">top builders</string>
    <string name="locality_properties_label">properties in</string>
    <string name="locality_switch_buy">buy</string>
    <string name="locality_switch_rent">rent</string>
    <string name="locality_nearby_localities_view_details">view details</string>
    <string name="locality_top_builders_view_details">view seller details</string>
    <string name="locality_top_agents_view_details">view projects</string>
    <string name="assist">assist</string>
    <string name="similar_properties">similar properties</string>
    <string name="login">login</string>
    <string name="project_button_contact_seller_text">contact seller</string>
    <string name="project_similar_project_title">similar projects</string>
    <string name="project_price_trends_title">price trends</string>
    <string name="project_construction_title">construction photos</string>
    <string name="project_specification_title">specifications</string>
    <string name="project_config_title">configurations</string>
    <string name="project_score">project score</string>
    <string name="project_experience_label">experience</string>
    <string name="project_average_delay_label">avg delay</string>
    <string name="project_ongoing_label">ongoing</string>
    <string name="project_past_label">past</string>
    <string name="more_about_builder">about builder</string>
    <string name="less_about_builder">less about builder</string>
    <string name="makaan">makaan</string>
    <string name="search_by_location">find joy…</string>
    <string name="search_default_hint">pick a location, builder or project</string>
    <string name="search_default_rent_hint">pick location or project</string>
    <string name="search_locality_hint">add more localities...</string>
    <string name="nightlife_string">nightlife</string>
    <string name="nightclubs_string">nightclubs</string>
    <string name="search">search</string>
    <string name="shortlist">shortlist</string>
    <string name="site_visit">property visit</string>
    <string name="effective_home_search">let\'s go step by step</string>
    <string name="home_loan">home loan</string>
    <string name="booking">booking</string>
    <string name="possession">possession</string>
    <string name="pre_launch_date">pre-launch date</string>
    <string name="get_upto">get upto</string>
    <string name="get_15000">\u20B9 15,000 cashback</string>
    <string name="on_brokerage">from makaan.com</string>
    <string name="how_it_works_heading">how it works</string>
    <string name="how_it_works">1. contact seller on makaan.com\n2. provide feedback\n3. share booking details</string>
    <string name="redeem_now">get cashback</string>
</resources>