<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/ice_cream_cone_width"
            android:layout_height="@dimen/ice_cream_cone_height"
            android:layout_marginTop="@dimen/ice_cream_margin_top"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ice_cream_cone" />

        <TextView
            android:id="@+id/hurray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hurray_margin_top"
            android:gravity="center_horizontal"
            android:textSize="@dimen/hurray_text_size"
            android:text="@string/hurray"
            android:textColor="@color/listingBlack"/>

        <TextView
            android:id="@+id/congratulation_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/hurray_text_size"
            android:text="@string/joy_ride"
            android:textColor="@color/listingBlack"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="vertical">

        <View
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/pyr_light_grey" />

        <TextView
            android:id="@+id/seller_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sellers_text_margin_top"
            android:gravity="center_horizontal"
            android:textSize="@dimen/hurray_text_size"
            android:text="@string/seller"
            android:textColor="@color/listingBlack"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/hurray_text_size"
            android:text="@string/contact_you"
            android:gravity="center_horizontal"
            android:textColor="@color/listingBlack"/>

        <TextView
            android:id="@+id/thank_you_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/done_text_size_margin_top"
            android:textSize="@dimen/done_text_size"
            android:textColor="@color/appThemeRed"
            android:text="@string/thank_you_continue"/>

    </LinearLayout>

</LinearLayout>