<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/city_internal_padding"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/city_connect_header"
        android:layout_marginLeft="@dimen/city_connect_header_margin_left"
        android:layout_marginRight="@dimen/city_connect_header_margin_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city_connect_header_text"
        android:textSize="@dimen/city_header_text"
        android:textColor="@color/white"
        android:gravity="center"/>
    <TextView
        android:text="@string/intrested_in"
        android:layout_width="match_parent"
        android:textSize="@dimen/city_small_text"
        android:layout_below="@+id/city_connect_header"
        android:layout_marginTop="@dimen/city_connect_interested_top_margin"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_height="wrap_content"/>
    <Switch
        android:id="@+id/city_connect_buy_rent_switch"
        android:layout_below="@+id/city_connect_header"
        android:layout_marginTop="@dimen/city_connect_buy_rent_top_margin"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_alignBaseline="@id/city_connect_buy_rent_switch"
        android:layout_toLeftOf="@id/city_connect_buy_rent_switch"
        android:layout_width="wrap_content"
        android:layout_marginRight="15dp"
        android:textColor="@color/white"
        android:text="buy"
        android:textSize="@dimen/city_small_text"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_alignBaseline="@id/city_connect_buy_rent_switch"
        android:layout_toRightOf="@id/city_connect_buy_rent_switch"
        android:layout_width="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="rent"
        android:textSize="16sp"
        android:layout_height="wrap_content"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/city_user_name_text"
        android:layout_below="@id/city_connect_buy_rent_switch"
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:theme="@style/city_text_label"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/city_user_email_text"
        android:layout_below="@id/city_user_name_text"
        android:layout_marginTop="36.5dp"
        android:layout_width="match_parent"
        android:theme="@style/city_text_label"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>
    <Spinner
        android:id="@+id/country_code_spinner"
        android:layout_marginTop="35.5dp"
        android:layout_below="@+id/city_user_email_text"
        android:layout_width="82dp"
        android:layout_height="wrap_content"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/city_user_phone_text"
        android:layout_toRightOf="@id/country_code_spinner"
        android:layout_marginTop="35.5dp"
        android:layout_below="@+id/city_user_email_text"
        android:layout_width="match_parent"
        android:theme="@style/city_text_label"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone"
            android:textColor="@color/white"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_centerInParent="true"
        android:paddingLeft="52dp"
        android:paddingRight="52dp"
        android:paddingBottom="9dp"
        android:paddingTop="9dp"
        android:layout_marginBottom="160dp"
        android:textColor="@color/textview_text_selector"
        android:text="@string/submit"
        android:gravity="center"
        android:textSize="16sp"
        android:background="@drawable/textview_background_selector"
        android:layout_below="@+id/city_user_phone_text"/>
</RelativeLayout>
