<?xml version="1.0" encoding="utf-8"?>

<!-- TODO WIP, hardcoded  dimen-->

<com.makaan.jarvis.ui.cards.AskReqCard xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/chat_card_bg"
    android:orientation="vertical"
    android:layout_margin="@dimen/send_req_card_margin"
    android:gravity="center_horizontal"
    android:padding="@dimen/send_req_card_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bhk_string"
        android:layout_marginBottom="@dimen/bhk_string_margin_bottom"
        android:textSize="@dimen/bhk_string_text_size" />

    <com.makaan.ui.view.ExpandableHeightGridView
        android:id="@+id/fragment_dialog_filters_item_layout_grid_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:horizontalSpacing="@dimen/jarvis_bhk_horizontal_spacing"
        android:isScrollContainer="false"
        android:numColumns="4"
        android:verticalSpacing="@dimen/fragment_dialog_filters_checkbox_grid_item_vertical_padding"  />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/et_price_hint"
            android:singleLine="true"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:textSize="@dimen/et_price_edit_text_size" />

        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_locality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_locality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_locality_hint"
            android:singleLine="true"
            android:textSize="@dimen/et_locality_edit_text_size" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_apply_margin_top_bottom"
        android:padding="@dimen/btn_apply_padding"
        android:background="@drawable/filled_red"
        android:text="@string/btn_apply_string"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_apply_text_size" />

</com.makaan.jarvis.ui.cards.AskReqCard>
